# interactive-mandelbrot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  vcpkg.json
rsrc/: color.h  colormaps.h  sdl_error.h  vec.h  viewport.h
shaders/: compile.bat
shaders/compiled/: mandelbrot.frag.spv
shaders/source/: mandelbrot.frag  mandelbrot.vert
src/: gpu.h  mandelbrot.h  window.cpp  window.h
